2008-02-08  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/elements/.cvsignore:
	Spell the new tests correctly in .cvsignore

2008-02-08  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/multifile/gstmultifilesrc.c: (gst_multi_file_src_create):
	  Need to use gsize here for the size, fixes compiler warning.

	* tests/examples/equalizer/.cvsignore:
	* tests/examples/equalizer/Makefile.am:
	* tests/examples/spectrum/.cvsignore:
	* tests/examples/spectrum/Makefile.am:
	  Add missing files to fix the build.

2008-02-08  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/gst-plugins-good-plugins.args:
	* docs/plugins/gst-plugins-good-plugins.hierarchy:
	* docs/plugins/inspect/plugin-multifile.xml:
	* tests/check/Makefile.am:
	* tests/check/elements/.cvsignore:

	Move multifile plugin from -bad.
	Fixes: #490283

2008-02-08  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/gst-plugins-good-plugins.args:
	* docs/plugins/gst-plugins-good-plugins.hierarchy:
	* docs/plugins/inspect/plugin-spectrum.xml:
	* gst/spectrum/Makefile.am:
	* tests/check/Makefile.am:
	* tests/check/elements/.cvsignore:
	* tests/examples/Makefile.am:

	Move spectrum plugin from -bad.
	Move examples into tests/examples/spectrum.

2008-02-08  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/gst-plugins-good-plugins.args:
	* docs/plugins/gst-plugins-good-plugins.hierarchy:
	* docs/plugins/gst-plugins-good-plugins.interfaces:
	* docs/plugins/inspect/plugin-equalizer.xml:
	* gst/equalizer/Makefile.am:
	* tests/check/Makefile.am: